--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -31,6 +31,7 @@
             android:textStyle="bold" />
 
         <ImageView
+            android:id="@+id/img_shape"
             android:src="@drawable/ic_shape"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,6 +62,14 @@
             android:textSize="16sp"
             tools:ignore="RtlSymmetry" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_notes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="10dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_notes"/>
 
 
     </LinearLayout>
@@ -70,6 +79,7 @@
         android:layout_height="70dp"
         android:layout_margin="20dp"
         android:backgroundTint="#FFC107"
+        app:cornerRadius="500dp"
         android:text="@string/plus"
         android:textSize="24sp"
         android:textStyle="bold"
