--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#D88B02</color>
+    <color name="red">#571818</color>
+    <color name="black2">#131212</color>
+    <color name="white2">#EBE4C9</color>
 </resources>
