--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black2"
-    tools:context=".ui.fragments.Regiiste.RegisterFragment">
+    tools:context=".ui.fragments.register.RegisterFragment">
 
     <ImageView
         android:id="@+id/img_notes"
